style projects list & begin adding links

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "version": "1.0.0",
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
+    "@material-ui/core": "^3.0.3",
     "babel-plugin-styled-components": "^1.6.3",
     "d3": "^5.7.0",
     "gatsby": "^1.9.277",
