style header scroll animation

--- a/package.json
+++ b/package.json
@@ -36,6 +36,6 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/gatsbyjs/gatsby-starter-default"
+    "url": "https://dcorn068.github.io/dc_gatsby/"
   }
 }
