--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@material-ui/core": "^3.0.3",
     "babel-plugin-styled-components": "^1.6.3",
     "d3": "^5.7.0",
+    "emailjs-com": "^2.2.4",
     "gatsby": "^1.9.277",
     "gatsby-link": "^1.6.46",
     "gatsby-plugin-react-helmet": "^2.0.11",
